# rust-rest-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 01_create_users_table.sql  create_users_table.sql
src/: main.rs
src/application/dtos/: auth_dto.rs  user_dto.rs
src/application/services/: auth_application_service.rs  mod.rs  user_application_service.rs
src/config/: mod.rs
src/db/: mod.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: auth_service.rs
src/domains/: mod.rs
src/domains/auth/: controller.rs  mod.rs  route.rs  service.rs
src/domains/health/: controller.rs  mod.rs  route.rs
src/domains/root/: controller.rs
src/domains/user/: controller.rs  dto.rs  entity.rs  mod.rs  repository.rs  route.rs  service.rs
src/infrastructure/auth/: jwt.rs  middleware.rs
src/infrastructure/persistence/: postgres_user_repository.rs
src/presentation/api/: auth_controller.rs  user_controller.rs
src/repositories/: user_repository.rs
src/shared/: auth.rs  config.rs  error.rs  mod.rs
src/shared/middleware/: auth.rs
src/utils/: auth.rs  config_validator.rs  error.rs  logger.rs  middleware.rs  mod.rs  rate_limiter.rs  response.rs
src/utils/middleware/: auth.rs  logger.rs
