[package]
name = "rust_rest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
env_logger = "0.10"
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
derive_more = "0.99"
actix-cors = "0.6"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
thiserror = "1.0"
regex = "1.5"